# chester

chess_core/: Cargo.toml
chess_core/chess_perftree/src/: main.rs
chess_core/src/: collections.rs  color.rs  lib.rs  position.rs  square.rs
chess_core/src/hash/: mod.rs  zobrist.rs
chess_core/src/move/: mod.rs  move_generator.rs  move_maps.rs
chess_core/src/state/: bitboard.rs  chess_board.rs  flags.rs  mod.rs
chess_engines/: Cargo.toml
chess_engines/src/: engine.rs  lib.rs
chess_engines/src/alpha_beta/: search.rs
chess_engines/src/alpha_beta/evaluation/: simple_eval.rs
chess_engines/src/mcts/: mod.rs  v2.rs
chess_wasm/src/: api.rs
